cmake_minimum_required(VERSION 2.8.0)
project(botan)

# used config command line
# ./configure.py --with-build-dir=newBuild  --with-cmake --cc=clang --link-method=symlink

if(POLICY CMP0042)
cmake_policy(SET CMP0042 NEW)
endif()

set(BOTAN_SOURCES
    "src/lib/asn1/alg_id.cpp"
    "src/lib/asn1/asn1_attribute.cpp"
    "src/lib/asn1/asn1_obj.cpp"
    "src/lib/asn1/asn1_oid.cpp"
    "src/lib/asn1/asn1_print.cpp"
    "src/lib/asn1/asn1_str.cpp"
    "src/lib/asn1/asn1_time.cpp"
    "src/lib/asn1/ber_dec.cpp"
    "src/lib/asn1/der_enc.cpp"
    "src/lib/asn1/oid_maps.cpp"
    "src/lib/asn1/oids.cpp"
    "src/lib/base/buf_comp.cpp"
    "src/lib/base/scan_name.cpp"
    "src/lib/base/sym_algo.cpp"
    "src/lib/base/symkey.cpp"
    "src/lib/block/aes/aes.cpp"
    "src/lib/block/aes/aes_ni/aes_ni.cpp"
    "src/lib/block/aes/aes_vperm/aes_vperm.cpp"
    "src/lib/block/aria/aria.cpp"
    "src/lib/block/block_cipher.cpp"
    "src/lib/block/blowfish/blowfish.cpp"
    "src/lib/block/camellia/camellia.cpp"
    "src/lib/block/cascade/cascade.cpp"
    "src/lib/block/cast128/cast128.cpp"
    "src/lib/block/cast256/cast256.cpp"
    "src/lib/block/des/des.cpp"
    "src/lib/block/des/des_tab.cpp"
    "src/lib/block/des/desx.cpp"
    "src/lib/block/gost_28147/gost_28147.cpp"
    "src/lib/block/idea/idea.cpp"
    "src/lib/block/idea/idea_sse2/idea_sse2.cpp"
    "src/lib/block/kasumi/kasumi.cpp"
    "src/lib/block/lion/lion.cpp"
    "src/lib/block/misty1/misty1.cpp"
    "src/lib/block/noekeon/noekeon.cpp"
    "src/lib/block/noekeon/noekeon_simd/noekeon_simd.cpp"
    "src/lib/block/seed/seed.cpp"
    "src/lib/block/serpent/serpent.cpp"
    "src/lib/block/serpent/serpent_avx2/serpent_avx2.cpp"
    "src/lib/block/serpent/serpent_simd/serpent_simd.cpp"
    "src/lib/block/shacal2/shacal2.cpp"
    "src/lib/block/shacal2/shacal2_avx2/shacal2_avx2.cpp"
    "src/lib/block/shacal2/shacal2_simd/shacal2_simd.cpp"
    "src/lib/block/shacal2/shacal2_x86/shacal2_x86.cpp"
    "src/lib/block/sm4/sm4.cpp"
    "src/lib/block/threefish_512/threefish_512.cpp"
    "src/lib/block/threefish_512/threefish_512_avx2/threefish_512_avx2.cpp"
    "src/lib/block/twofish/twofish.cpp"
    "src/lib/block/twofish/twofish_tab.cpp"
    "src/lib/block/xtea/xtea.cpp"
    "src/lib/codec/base32/base32.cpp"
    "src/lib/codec/base58/base58.cpp"
    "src/lib/codec/base64/base64.cpp"
    "src/lib/codec/hex/hex.cpp"
    "src/lib/compat/sodium/sodium_25519.cpp"
    "src/lib/compat/sodium/sodium_aead.cpp"
    "src/lib/compat/sodium/sodium_auth.cpp"
    "src/lib/compat/sodium/sodium_box.cpp"
    "src/lib/compat/sodium/sodium_chacha.cpp"
    "src/lib/compat/sodium/sodium_salsa.cpp"
    "src/lib/compat/sodium/sodium_secretbox.cpp"
    "src/lib/compat/sodium/sodium_utils.cpp"
    "src/lib/entropy/dev_random/dev_random.cpp"
    "src/lib/entropy/entropy_srcs.cpp"
    "src/lib/entropy/proc_walk/proc_walk.cpp"
    "src/lib/entropy/rdseed/rdseed.cpp"
    "src/lib/ffi/ffi.cpp"
    "src/lib/ffi/ffi_block.cpp"
    "src/lib/ffi/ffi_cert.cpp"
    "src/lib/ffi/ffi_cipher.cpp"
    "src/lib/ffi/ffi_fpe.cpp"
    "src/lib/ffi/ffi_hash.cpp"
    "src/lib/ffi/ffi_hotp.cpp"
    "src/lib/ffi/ffi_kdf.cpp"
    "src/lib/ffi/ffi_keywrap.cpp"
    "src/lib/ffi/ffi_mac.cpp"
    "src/lib/ffi/ffi_mp.cpp"
    "src/lib/ffi/ffi_pk_op.cpp"
    "src/lib/ffi/ffi_pkey.cpp"
    "src/lib/ffi/ffi_pkey_algs.cpp"
    "src/lib/ffi/ffi_rng.cpp"
    "src/lib/ffi/ffi_totp.cpp"
    "src/lib/filters/algo_filt.cpp"
    "src/lib/filters/b64_filt.cpp"
    "src/lib/filters/basefilt.cpp"
    "src/lib/filters/buf_filt.cpp"
    "src/lib/filters/cipher_filter.cpp"
    "src/lib/filters/comp_filter.cpp"
    "src/lib/filters/data_snk.cpp"
    "src/lib/filters/fd_unix/fd_unix.cpp"
    "src/lib/filters/filter.cpp"
    "src/lib/filters/hex_filt.cpp"
    "src/lib/filters/out_buf.cpp"
    "src/lib/filters/pipe.cpp"
    "src/lib/filters/pipe_io.cpp"
    "src/lib/filters/pipe_rw.cpp"
    "src/lib/filters/secqueue.cpp"
    "src/lib/filters/threaded_fork.cpp"
    "src/lib/hash/blake2/blake2b.cpp"
    "src/lib/hash/checksum/adler32/adler32.cpp"
    "src/lib/hash/checksum/crc24/crc24.cpp"
    "src/lib/hash/checksum/crc32/crc32.cpp"
    "src/lib/hash/comb4p/comb4p.cpp"
    "src/lib/hash/gost_3411/gost_3411.cpp"
    "src/lib/hash/hash.cpp"
    "src/lib/hash/keccak/keccak.cpp"
    "src/lib/hash/md4/md4.cpp"
    "src/lib/hash/md5/md5.cpp"
    "src/lib/hash/mdx_hash/mdx_hash.cpp"
    "src/lib/hash/par_hash/par_hash.cpp"
    "src/lib/hash/rmd160/rmd160.cpp"
    "src/lib/hash/sha1/sha160.cpp"
    "src/lib/hash/sha1/sha1_sse2/sha1_sse2.cpp"
    "src/lib/hash/sha1/sha1_x86/sha1_x86.cpp"
    "src/lib/hash/sha2_32/sha2_32.cpp"
    "src/lib/hash/sha2_32/sha2_32_bmi2/sha2_32_bmi2.cpp"
    "src/lib/hash/sha2_32/sha2_32_x86/sha2_32_x86.cpp"
    "src/lib/hash/sha2_64/sha2_64.cpp"
    "src/lib/hash/sha2_64/sha2_64_bmi2/sha2_64_bmi2.cpp"
    "src/lib/hash/sha3/sha3.cpp"
    "src/lib/hash/sha3/sha3_bmi2/sha3_bmi2.cpp"
    "src/lib/hash/shake/shake.cpp"
    "src/lib/hash/skein/skein_512.cpp"
    "src/lib/hash/sm3/sm3.cpp"
    "src/lib/hash/streebog/streebog.cpp"
    "src/lib/hash/streebog/streebog_precalc.cpp"
    "src/lib/hash/tiger/tig_tab.cpp"
    "src/lib/hash/tiger/tiger.cpp"
    "src/lib/hash/whirlpool/whirlpool.cpp"
    "src/lib/hash/whirlpool/whrl_tab.cpp"
    "src/lib/kdf/hkdf/hkdf.cpp"
    "src/lib/kdf/kdf.cpp"
    "src/lib/kdf/kdf1/kdf1.cpp"
    "src/lib/kdf/kdf1_iso18033/kdf1_iso18033.cpp"
    "src/lib/kdf/kdf2/kdf2.cpp"
    "src/lib/kdf/prf_tls/prf_tls.cpp"
    "src/lib/kdf/prf_x942/prf_x942.cpp"
    "src/lib/kdf/sp800_108/sp800_108.cpp"
    "src/lib/kdf/sp800_56a/sp800_56a.cpp"
    "src/lib/kdf/sp800_56c/sp800_56c.cpp"
    "src/lib/mac/cbc_mac/cbc_mac.cpp"
    "src/lib/mac/cmac/cmac.cpp"
    "src/lib/mac/gmac/gmac.cpp"
    "src/lib/mac/hmac/hmac.cpp"
    "src/lib/mac/mac.cpp"
    "src/lib/mac/poly1305/poly1305.cpp"
    "src/lib/mac/siphash/siphash.cpp"
    "src/lib/mac/x919_mac/x919_mac.cpp"
    "src/lib/math/bigint/big_code.cpp"
    "src/lib/math/bigint/big_io.cpp"
    "src/lib/math/bigint/big_ops2.cpp"
    "src/lib/math/bigint/big_ops3.cpp"
    "src/lib/math/bigint/big_rand.cpp"
    "src/lib/math/bigint/bigint.cpp"
    "src/lib/math/bigint/divide.cpp"
    "src/lib/math/mp/mp_comba.cpp"
    "src/lib/math/mp/mp_karat.cpp"
    "src/lib/math/mp/mp_monty.cpp"
    "src/lib/math/mp/mp_monty_n.cpp"
    "src/lib/math/numbertheory/dsa_gen.cpp"
    "src/lib/math/numbertheory/jacobi.cpp"
    "src/lib/math/numbertheory/make_prm.cpp"
    "src/lib/math/numbertheory/mod_inv.cpp"
    "src/lib/math/numbertheory/monty.cpp"
    "src/lib/math/numbertheory/monty_exp.cpp"
    "src/lib/math/numbertheory/mp_numth.cpp"
    "src/lib/math/numbertheory/nistp_redc.cpp"
    "src/lib/math/numbertheory/numthry.cpp"
    "src/lib/math/numbertheory/pow_mod.cpp"
    "src/lib/math/numbertheory/primality.cpp"
    "src/lib/math/numbertheory/primes.cpp"
    "src/lib/math/numbertheory/reducer.cpp"
    "src/lib/math/numbertheory/ressol.cpp"
    "src/lib/misc/aont/package.cpp"
    "src/lib/misc/cryptobox/cryptobox.cpp"
    "src/lib/misc/fpe_fe1/fpe_fe1.cpp"
    "src/lib/misc/hotp/hotp.cpp"
    "src/lib/misc/hotp/totp.cpp"
    "src/lib/misc/nist_keywrap/nist_keywrap.cpp"
    "src/lib/misc/rfc3394/rfc3394.cpp"
    "src/lib/misc/roughtime/roughtime.cpp"
    "src/lib/misc/srp6/srp6.cpp"
    "src/lib/misc/tss/tss.cpp"
    "src/lib/modes/aead/aead.cpp"
    "src/lib/modes/aead/ccm/ccm.cpp"
    "src/lib/modes/aead/chacha20poly1305/chacha20poly1305.cpp"
    "src/lib/modes/aead/eax/eax.cpp"
    "src/lib/modes/aead/gcm/clmul_cpu/clmul_cpu.cpp"
    "src/lib/modes/aead/gcm/clmul_ssse3/clmul_ssse3.cpp"
    "src/lib/modes/aead/gcm/gcm.cpp"
    "src/lib/modes/aead/gcm/ghash.cpp"
    "src/lib/modes/aead/ocb/ocb.cpp"
    "src/lib/modes/aead/siv/siv.cpp"
    "src/lib/modes/cbc/cbc.cpp"
    "src/lib/modes/cfb/cfb.cpp"
    "src/lib/modes/cipher_mode.cpp"
    "src/lib/modes/mode_pad/mode_pad.cpp"
    "src/lib/modes/xts/xts.cpp"
    "src/lib/passhash/bcrypt/bcrypt.cpp"
    "src/lib/passhash/passhash9/passhash9.cpp"
    "src/lib/pbkdf/argon2/argon2.cpp"
    "src/lib/pbkdf/argon2/argon2fmt.cpp"
    "src/lib/pbkdf/argon2/argon2pwhash.cpp"
    "src/lib/pbkdf/bcrypt_pbkdf/bcrypt_pbkdf.cpp"
    "src/lib/pbkdf/pbkdf.cpp"
    "src/lib/pbkdf/pbkdf1/pbkdf1.cpp"
    "src/lib/pbkdf/pbkdf2/pbkdf2.cpp"
    "src/lib/pbkdf/pgp_s2k/pgp_s2k.cpp"
    "src/lib/pbkdf/pwdhash.cpp"
    "src/lib/pbkdf/scrypt/scrypt.cpp"
    "src/lib/pk_pad/eme.cpp"
    "src/lib/pk_pad/eme_oaep/oaep.cpp"
    "src/lib/pk_pad/eme_pkcs1/eme_pkcs.cpp"
    "src/lib/pk_pad/eme_raw/eme_raw.cpp"
    "src/lib/pk_pad/emsa.cpp"
    "src/lib/pk_pad/emsa1/emsa1.cpp"
    "src/lib/pk_pad/emsa_pkcs1/emsa_pkcs1.cpp"
    "src/lib/pk_pad/emsa_pssr/pssr.cpp"
    "src/lib/pk_pad/emsa_raw/emsa_raw.cpp"
    "src/lib/pk_pad/emsa_x931/emsa_x931.cpp"
    "src/lib/pk_pad/hash_id/hash_id.cpp"
    "src/lib/pk_pad/iso9796/iso9796.cpp"
    "src/lib/pk_pad/mgf1/mgf1.cpp"
    "src/lib/pk_pad/padding.cpp"
    "src/lib/prov/pkcs11/p11.cpp"
    "src/lib/prov/pkcs11/p11_ecc_key.cpp"
    "src/lib/prov/pkcs11/p11_ecdh.cpp"
    "src/lib/prov/pkcs11/p11_ecdsa.cpp"
    "src/lib/prov/pkcs11/p11_mechanism.cpp"
    "src/lib/prov/pkcs11/p11_module.cpp"
    "src/lib/prov/pkcs11/p11_object.cpp"
    "src/lib/prov/pkcs11/p11_randomgenerator.cpp"
    "src/lib/prov/pkcs11/p11_rsa.cpp"
    "src/lib/prov/pkcs11/p11_session.cpp"
    "src/lib/prov/pkcs11/p11_slot.cpp"
    "src/lib/prov/pkcs11/p11_x509.cpp"
    "src/lib/psk_db/psk_db.cpp"
    "src/lib/psk_db/psk_db_sql.cpp"
    "src/lib/pubkey/blinding.cpp"
    "src/lib/pubkey/cecpq1/cecpq1.cpp"
    "src/lib/pubkey/curve25519/curve25519.cpp"
    "src/lib/pubkey/curve25519/donna.cpp"
    "src/lib/pubkey/dh/dh.cpp"
    "src/lib/pubkey/dl_algo/dl_algo.cpp"
    "src/lib/pubkey/dl_group/dl_group.cpp"
    "src/lib/pubkey/dl_group/dl_named.cpp"
    "src/lib/pubkey/dlies/dlies.cpp"
    "src/lib/pubkey/dsa/dsa.cpp"
    "src/lib/pubkey/ec_group/curve_gfp.cpp"
    "src/lib/pubkey/ec_group/ec_group.cpp"
    "src/lib/pubkey/ec_group/ec_named.cpp"
    "src/lib/pubkey/ec_group/point_gfp.cpp"
    "src/lib/pubkey/ec_group/point_mul.cpp"
    "src/lib/pubkey/ecc_key/ecc_key.cpp"
    "src/lib/pubkey/ecdh/ecdh.cpp"
    "src/lib/pubkey/ecdsa/ecdsa.cpp"
    "src/lib/pubkey/ecgdsa/ecgdsa.cpp"
    "src/lib/pubkey/ecies/ecies.cpp"
    "src/lib/pubkey/eckcdsa/eckcdsa.cpp"
    "src/lib/pubkey/ed25519/ed25519.cpp"
    "src/lib/pubkey/ed25519/ed25519_fe.cpp"
    "src/lib/pubkey/ed25519/ed25519_key.cpp"
    "src/lib/pubkey/ed25519/ge.cpp"
    "src/lib/pubkey/ed25519/sc_muladd.cpp"
    "src/lib/pubkey/ed25519/sc_reduce.cpp"
    "src/lib/pubkey/elgamal/elgamal.cpp"
    "src/lib/pubkey/gost_3410/gost_3410.cpp"
    "src/lib/pubkey/keypair/keypair.cpp"
    "src/lib/pubkey/mce/code_based_key_gen.cpp"
    "src/lib/pubkey/mce/gf2m_rootfind_dcmp.cpp"
    "src/lib/pubkey/mce/gf2m_small_m.cpp"
    "src/lib/pubkey/mce/goppa_code.cpp"
    "src/lib/pubkey/mce/mce_workfactor.cpp"
    "src/lib/pubkey/mce/mceliece.cpp"
    "src/lib/pubkey/mce/mceliece_key.cpp"
    "src/lib/pubkey/mce/polyn_gf2m.cpp"
    "src/lib/pubkey/mceies/mceies.cpp"
    "src/lib/pubkey/newhope/newhope.cpp"
    "src/lib/pubkey/pbes2/pbes2.cpp"
    "src/lib/pubkey/pem/pem.cpp"
    "src/lib/pubkey/pk_algs.cpp"
    "src/lib/pubkey/pk_keys.cpp"
    "src/lib/pubkey/pk_ops.cpp"
    "src/lib/pubkey/pkcs8.cpp"
    "src/lib/pubkey/pubkey.cpp"
    "src/lib/pubkey/rfc6979/rfc6979.cpp"
    "src/lib/pubkey/rsa/rsa.cpp"
    "src/lib/pubkey/sm2/sm2.cpp"
    "src/lib/pubkey/sm2/sm2_enc.cpp"
    "src/lib/pubkey/workfactor.cpp"
    "src/lib/pubkey/x509_key.cpp"
    "src/lib/pubkey/xmss/xmss_common_ops.cpp"
    "src/lib/pubkey/xmss/xmss_hash.cpp"
    "src/lib/pubkey/xmss/xmss_index_registry.cpp"
    "src/lib/pubkey/xmss/xmss_parameters.cpp"
    "src/lib/pubkey/xmss/xmss_privatekey.cpp"
    "src/lib/pubkey/xmss/xmss_publickey.cpp"
    "src/lib/pubkey/xmss/xmss_signature.cpp"
    "src/lib/pubkey/xmss/xmss_signature_operation.cpp"
    "src/lib/pubkey/xmss/xmss_verification_operation.cpp"
    "src/lib/pubkey/xmss/xmss_wots_parameters.cpp"
    "src/lib/pubkey/xmss/xmss_wots_privatekey.cpp"
    "src/lib/pubkey/xmss/xmss_wots_publickey.cpp"
    "src/lib/rng/auto_rng/auto_rng.cpp"
    "src/lib/rng/chacha_rng/chacha_rng.cpp"
    "src/lib/rng/hmac_drbg/hmac_drbg.cpp"
    "src/lib/rng/processor_rng/processor_rng.cpp"
    "src/lib/rng/rdrand_rng/rdrand_rng.cpp"
    "src/lib/rng/rng.cpp"
    "src/lib/rng/stateful_rng/stateful_rng.cpp"
    "src/lib/rng/system_rng/system_rng.cpp"
    "src/lib/stream/chacha/chacha.cpp"
    "src/lib/stream/chacha/chacha_avx2/chacha_avx2.cpp"
    "src/lib/stream/chacha/chacha_simd32/chacha_simd32.cpp"
    "src/lib/stream/ctr/ctr.cpp"
    "src/lib/stream/ofb/ofb.cpp"
    "src/lib/stream/rc4/rc4.cpp"
    "src/lib/stream/salsa20/salsa20.cpp"
    "src/lib/stream/shake_cipher/shake_cipher.cpp"
    "src/lib/stream/stream_cipher.cpp"
    "src/lib/tls/credentials_manager.cpp"
    "src/lib/tls/msg_cert_req.cpp"
    "src/lib/tls/msg_cert_status.cpp"
    "src/lib/tls/msg_cert_verify.cpp"
    "src/lib/tls/msg_certificate.cpp"
    "src/lib/tls/msg_client_hello.cpp"
    "src/lib/tls/msg_client_kex.cpp"
    "src/lib/tls/msg_finished.cpp"
    "src/lib/tls/msg_hello_verify.cpp"
    "src/lib/tls/msg_server_hello.cpp"
    "src/lib/tls/msg_server_kex.cpp"
    "src/lib/tls/msg_session_ticket.cpp"
    "src/lib/tls/sessions_sql/tls_session_manager_sql.cpp"
    "src/lib/tls/tls_alert.cpp"
    "src/lib/tls/tls_algos.cpp"
    "src/lib/tls/tls_blocking.cpp"
    "src/lib/tls/tls_callbacks.cpp"
    "src/lib/tls/tls_cbc/tls_cbc.cpp"
    "src/lib/tls/tls_channel.cpp"
    "src/lib/tls/tls_ciphersuite.cpp"
    "src/lib/tls/tls_client.cpp"
    "src/lib/tls/tls_extensions.cpp"
    "src/lib/tls/tls_handshake_hash.cpp"
    "src/lib/tls/tls_handshake_io.cpp"
    "src/lib/tls/tls_handshake_state.cpp"
    "src/lib/tls/tls_policy.cpp"
    "src/lib/tls/tls_record.cpp"
    "src/lib/tls/tls_server.cpp"
    "src/lib/tls/tls_session.cpp"
    "src/lib/tls/tls_session_key.cpp"
    "src/lib/tls/tls_session_manager_memory.cpp"
    "src/lib/tls/tls_suite_info.cpp"
    "src/lib/tls/tls_text_policy.cpp"
    "src/lib/tls/tls_version.cpp"
    "src/lib/utils/assert.cpp"
    "src/lib/utils/calendar.cpp"
    "src/lib/utils/charset.cpp"
    "src/lib/utils/cpuid/cpuid.cpp"
    "src/lib/utils/cpuid/cpuid_arm.cpp"
    "src/lib/utils/cpuid/cpuid_ppc.cpp"
    "src/lib/utils/cpuid/cpuid_x86.cpp"
    "src/lib/utils/ct_utils.cpp"
    "src/lib/utils/data_src.cpp"
    "src/lib/utils/dyn_load/dyn_load.cpp"
    "src/lib/utils/exceptn.cpp"
    "src/lib/utils/filesystem.cpp"
    "src/lib/utils/http_util/http_util.cpp"
    "src/lib/utils/locking_allocator/locking_allocator.cpp"
    "src/lib/utils/mem_ops.cpp"
    "src/lib/utils/mem_pool/mem_pool.cpp"
    "src/lib/utils/os_utils.cpp"
    "src/lib/utils/parsing.cpp"
    "src/lib/utils/poly_dbl/poly_dbl.cpp"
    "src/lib/utils/read_cfg.cpp"
    "src/lib/utils/read_kv.cpp"
    "src/lib/utils/socket/socket.cpp"
    "src/lib/utils/socket/socket_udp.cpp"
    "src/lib/utils/socket/uri.cpp"
    "src/lib/utils/thread_utils/barrier.cpp"
    "src/lib/utils/thread_utils/rwlock.cpp"
    "src/lib/utils/thread_utils/semaphore.cpp"
    "src/lib/utils/thread_utils/thread_pool.cpp"
    "src/lib/utils/timer.cpp"
    "src/lib/utils/uuid/uuid.cpp"
    "src/lib/utils/version.cpp"
    "src/lib/x509/asn1_alt_name.cpp"
    "src/lib/x509/cert_status.cpp"
    "src/lib/x509/certstor.cpp"
    "src/lib/x509/certstor_flatfile/certstor_flatfile.cpp"
    "src/lib/x509/certstor_sql/certstor_sql.cpp"
    "src/lib/x509/certstor_system/certstor_system.cpp"
    "src/lib/x509/crl_ent.cpp"
    "src/lib/x509/datastor.cpp"
    "src/lib/x509/key_constraint.cpp"
    "src/lib/x509/name_constraint.cpp"
    "src/lib/x509/ocsp.cpp"
    "src/lib/x509/ocsp_types.cpp"
    "src/lib/x509/pkcs10.cpp"
    "src/lib/x509/x509_ca.cpp"
    "src/lib/x509/x509_crl.cpp"
    "src/lib/x509/x509_dn.cpp"
    "src/lib/x509/x509_dn_ub.cpp"
    "src/lib/x509/x509_ext.cpp"
    "src/lib/x509/x509_obj.cpp"
    "src/lib/x509/x509cert.cpp"
    "src/lib/x509/x509opt.cpp"
    "src/lib/x509/x509path.cpp"
    "src/lib/x509/x509self.cpp"

)

set(BOTAN_CLI
    "src/cli/argon2.cpp"
    "src/cli/asn1.cpp"
    "src/cli/bcrypt.cpp"
    "src/cli/cc_enc.cpp"
    "src/cli/cli.cpp"
    "src/cli/cli_rng.cpp"
    "src/cli/codec.cpp"
    "src/cli/compress.cpp"
    "src/cli/encryption.cpp"
    "src/cli/entropy.cpp"
    "src/cli/hash.cpp"
    "src/cli/hmac.cpp"
    "src/cli/main.cpp"
    "src/cli/math.cpp"
    "src/cli/pbkdf.cpp"
    "src/cli/pk_crypt.cpp"
    "src/cli/psk.cpp"
    "src/cli/pubkey.cpp"
    "src/cli/roughtime.cpp"
    "src/cli/sandbox.cpp"
    "src/cli/speed.cpp"
    "src/cli/timing_tests.cpp"
    "src/cli/tls_client.cpp"
    "src/cli/tls_http_server.cpp"
    "src/cli/tls_proxy.cpp"
    "src/cli/tls_server.cpp"
    "src/cli/tls_utils.cpp"
    "src/cli/tss.cpp"
    "src/cli/utils.cpp"
    "src/cli/x509.cpp"

)

set(BOTAN_TESTS
    "src/tests/main.cpp"
    "src/tests/test_aead.cpp"
    "src/tests/test_asn1.cpp"
    "src/tests/test_bigint.cpp"
    "src/tests/test_block.cpp"
    "src/tests/test_blowfish.cpp"
    "src/tests/test_c25519.cpp"
    "src/tests/test_certstor.cpp"
    "src/tests/test_certstor_flatfile.cpp"
    "src/tests/test_certstor_system.cpp"
    "src/tests/test_certstor_utils.cpp"
    "src/tests/test_clang_bug.cpp"
    "src/tests/test_compression.cpp"
    "src/tests/test_cryptobox.cpp"
    "src/tests/test_datastore.cpp"
    "src/tests/test_dh.cpp"
    "src/tests/test_dl_group.cpp"
    "src/tests/test_dlies.cpp"
    "src/tests/test_dsa.cpp"
    "src/tests/test_ecc_pointmul.cpp"
    "src/tests/test_ecdh.cpp"
    "src/tests/test_ecdsa.cpp"
    "src/tests/test_ecgdsa.cpp"
    "src/tests/test_ecies.cpp"
    "src/tests/test_eckcdsa.cpp"
    "src/tests/test_ed25519.cpp"
    "src/tests/test_elg.cpp"
    "src/tests/test_entropy.cpp"
    "src/tests/test_ffi.cpp"
    "src/tests/test_filters.cpp"
    "src/tests/test_fpe.cpp"
    "src/tests/test_gf2m.cpp"
    "src/tests/test_gost_3410.cpp"
    "src/tests/test_hash.cpp"
    "src/tests/test_hash_id.cpp"
    "src/tests/test_kdf.cpp"
    "src/tests/test_keywrap.cpp"
    "src/tests/test_mac.cpp"
    "src/tests/test_mceliece.cpp"
    "src/tests/test_modes.cpp"
    "src/tests/test_mp.cpp"
    "src/tests/test_name_constraint.cpp"
    "src/tests/test_newhope.cpp"
    "src/tests/test_ocb.cpp"
    "src/tests/test_ocsp.cpp"
    "src/tests/test_octetstring.cpp"
    "src/tests/test_oid.cpp"
    "src/tests/test_os_utils.cpp"
    "src/tests/test_otp.cpp"
    "src/tests/test_package_transform.cpp"
    "src/tests/test_pad.cpp"
    "src/tests/test_passhash.cpp"
    "src/tests/test_pbkdf.cpp"
    "src/tests/test_pem.cpp"
    "src/tests/test_pk_pad.cpp"
    "src/tests/test_pkcs11_high_level.cpp"
    "src/tests/test_pkcs11_low_level.cpp"
    "src/tests/test_psk_db.cpp"
    "src/tests/test_pubkey.cpp"
    "src/tests/test_rfc6979.cpp"
    "src/tests/test_rng.cpp"
    "src/tests/test_rng_kat.cpp"
    "src/tests/test_roughtime.cpp"
    "src/tests/test_rsa.cpp"
    "src/tests/test_runner.cpp"
    "src/tests/test_simd.cpp"
    "src/tests/test_siv.cpp"
    "src/tests/test_sm2.cpp"
    "src/tests/test_sodium.cpp"
    "src/tests/test_srp6.cpp"
    "src/tests/test_stream.cpp"
    "src/tests/test_tests.cpp"
    "src/tests/test_thread_utils.cpp"
    "src/tests/test_tls.cpp"
    "src/tests/test_tls_messages.cpp"
    "src/tests/test_tls_stream_integration.cpp"
    "src/tests/test_tpm.cpp"
    "src/tests/test_tss.cpp"
    "src/tests/test_uri.cpp"
    "src/tests/test_utils.cpp"
    "src/tests/test_workfactor.cpp"
    "src/tests/test_x509_dn.cpp"
    "src/tests/test_x509_path.cpp"
    "src/tests/test_xmss.cpp"
    "src/tests/tests.cpp"
    "src/tests/unit_asio_stream.cpp"
    "src/tests/unit_ecc.cpp"
    "src/tests/unit_ecdh.cpp"
    "src/tests/unit_ecdsa.cpp"
    "src/tests/unit_tls.cpp"
    "src/tests/unit_tls_policy.cpp"
    "src/tests/unit_x509.cpp"

)

set_source_files_properties("src/lib/block/aes/aes_ni/aes_ni.cpp" PROPERTIES COMPILE_FLAGS "-maes -mpclmul -msse2 -mssse3")

set_source_files_properties("src/lib/block/aes/aes_vperm/aes_vperm.cpp" PROPERTIES COMPILE_FLAGS "-msse2 -mssse3")

set_source_files_properties("src/lib/block/idea/idea_sse2/idea_sse2.cpp" PROPERTIES COMPILE_FLAGS "-msse2")

set_source_files_properties("src/lib/block/noekeon/noekeon_simd/noekeon_simd.cpp" PROPERTIES COMPILE_FLAGS "-msse2")

set_source_files_properties("src/lib/block/serpent/serpent_avx2/serpent_avx2.cpp" PROPERTIES COMPILE_FLAGS "-mavx2")

set_source_files_properties("src/lib/block/serpent/serpent_simd/serpent_simd.cpp" PROPERTIES COMPILE_FLAGS "-msse2")

set_source_files_properties("src/lib/block/shacal2/shacal2_avx2/shacal2_avx2.cpp" PROPERTIES COMPILE_FLAGS "-mavx2")

set_source_files_properties("src/lib/block/shacal2/shacal2_simd/shacal2_simd.cpp" PROPERTIES COMPILE_FLAGS "-msse2")

set_source_files_properties("src/lib/block/shacal2/shacal2_x86/shacal2_x86.cpp" PROPERTIES COMPILE_FLAGS "-msha -msse2 -mssse3")

set_source_files_properties("src/lib/block/threefish_512/threefish_512_avx2/threefish_512_avx2.cpp" PROPERTIES COMPILE_FLAGS "-mavx2")

set_source_files_properties("src/lib/entropy/rdseed/rdseed.cpp" PROPERTIES COMPILE_FLAGS "-mrdseed -msse2")

set_source_files_properties("src/lib/hash/sha1/sha1_sse2/sha1_sse2.cpp" PROPERTIES COMPILE_FLAGS "-msse2")

set_source_files_properties("src/lib/hash/sha1/sha1_x86/sha1_x86.cpp" PROPERTIES COMPILE_FLAGS "-msha -msse2 -msse4.1 -mssse3")

set_source_files_properties("src/lib/hash/sha2_32/sha2_32_bmi2/sha2_32_bmi2.cpp" PROPERTIES COMPILE_FLAGS "-mbmi -mbmi2")

set_source_files_properties("src/lib/hash/sha2_32/sha2_32_x86/sha2_32_x86.cpp" PROPERTIES COMPILE_FLAGS "-msha -msse2 -msse4.1 -mssse3")

set_source_files_properties("src/lib/hash/sha2_64/sha2_64_bmi2/sha2_64_bmi2.cpp" PROPERTIES COMPILE_FLAGS "-mbmi -mbmi2")

set_source_files_properties("src/lib/hash/sha3/sha3_bmi2/sha3_bmi2.cpp" PROPERTIES COMPILE_FLAGS "-mbmi -mbmi2")

set_source_files_properties("src/lib/modes/aead/gcm/clmul_cpu/clmul_cpu.cpp" PROPERTIES COMPILE_FLAGS "-maes -mpclmul -msse2 -mssse3")

set_source_files_properties("src/lib/modes/aead/gcm/clmul_ssse3/clmul_ssse3.cpp" PROPERTIES COMPILE_FLAGS "-msse2 -mssse3")

set_source_files_properties("src/lib/stream/chacha/chacha_avx2/chacha_avx2.cpp" PROPERTIES COMPILE_FLAGS "-mavx2")

set_source_files_properties("src/lib/stream/chacha/chacha_simd32/chacha_simd32.cpp" PROPERTIES COMPILE_FLAGS "-msse2")

set_source_files_properties("src/tests/test_simd.cpp" PROPERTIES COMPILE_FLAGS "-msse2")



option(ENABLED_OPTIONAL_WARINIGS "If enabled more strict warning policy will be used" OFF)
option(ENABLED_LTO "If enabled link time optimization will be used" OFF)

set(COMPILER_FEATURES_RELEASE -std=c++11 -D_REENTRANT -O3 -fstack-protector -m64 -pthread)
set(COMPILER_FEATURES_DEBUG -std=c++11 -D_REENTRANT -g -fstack-protector -m64 -pthread)
set(COMPILER_FEATURES $<$<NOT:$<CONFIG:DEBUG>>:${COMPILER_FEATURES_RELEASE}>  $<$<CONFIG:DEBUG>:${COMPILER_FEATURES_DEBUG}>)
set(SHARED_FEATURES -fPIC -fvisibility=hidden)
set(STATIC_FEATURES -DBOTAN_DLL=)
set(COMPILER_WARNINGS -Wall -Wextra -Wpedantic -Wshadow -Wstrict-aliasing -Wstrict-overflow=5 -Wcast-align -Wmissing-declarations -Wpointer-arith -Wcast-qual)
set(COMPILER_INCLUDE_DIRS newBuild/build/include newBuild/build/include/external)
if(ENABLED_LTO)
    set(COMPILER_FEATURES ${COMPILER_FEATURES} -lto)
endif()
if(ENABLED_OPTIONAL_WARINIGS)
    set(COMPILER_OPTIONAL_WARNINGS -Wsign-promo -Wctor-dtor-privacy -Wdeprecated -Winit-self -Wnon-virtual-dtor -Wunused-macros -Wold-style-cast -Wuninitialized)
endif()

add_library(${PROJECT_NAME} STATIC ${BOTAN_SOURCES})
target_link_libraries(${PROJECT_NAME} PUBLIC  dl rt)
target_compile_options(${PROJECT_NAME} PUBLIC ${COMPILER_WARNINGS} ${COMPILER_FEATURES} ${COMPILER_OPTIONAL_WARNINGS} PRIVATE ${STATIC_FEATURES})
target_include_directories(${PROJECT_NAME} PUBLIC ${COMPILER_INCLUDE_DIRS})

set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}-static)

add_library(${PROJECT_NAME}_shared SHARED ${BOTAN_SOURCES})
target_link_libraries(${PROJECT_NAME}_shared PUBLIC  dl rt)
target_compile_options(${PROJECT_NAME}_shared PUBLIC ${COMPILER_WARNINGS} ${COMPILER_FEATURES} ${COMPILER_OPTIONAL_WARNINGS} PRIVATE ${SHARED_FEATURES})
target_include_directories(${PROJECT_NAME}_shared PUBLIC ${COMPILER_INCLUDE_DIRS})
set_target_properties(${PROJECT_NAME}_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

add_executable(${PROJECT_NAME}_cli ${BOTAN_CLI})
target_link_libraries(${PROJECT_NAME}_cli PRIVATE ${PROJECT_NAME}_shared  )
set_target_properties(${PROJECT_NAME}_cli PROPERTIES OUTPUT_NAME ${PROJECT_NAME}-cli)

add_executable(${PROJECT_NAME}_tests ${BOTAN_TESTS})
target_link_libraries(${PROJECT_NAME}_tests PRIVATE ${PROJECT_NAME}_shared  )
set_target_properties(${PROJECT_NAME}_tests PROPERTIES OUTPUT_NAME botan-test)

set(GLOBAL_CONFIGURATION_FILES configure.py .gitignore news.rst readme.rst)
file(GLOB_RECURSE CONFIGURATION_FILES src/configs/* )
file(GLOB_RECURSE DOCUMENTATION_FILES doc/* )
file(GLOB_RECURSE HEADER_FILES src/*.h )
file(GLOB_RECURSE INFO_FILES src/lib/*info.txt )
add_custom_target(CONFIGURATION_DUMMY SOURCES ${GLOBAL_CONFIGURATION_FILES} ${CONFIGURATION_FILES} ${DOCUMENTATION_FILES} ${INFO_FILES} ${HEADER_FILES})

